--- a/src/components/view/news/news.css
+++ b/src/components/view/news/news.css
@@ -1,3 +1,6 @@
+.news {
+    width: 70%;
+}
 .news__item {
     display: flex;
     flex-direction: column;
@@ -162,5 +165,10 @@
 
     .news__item.alt .news__meta-details {
         padding-left: 25px;
+    }
+}
+@media (max-width: 768px) {
+    .news {
+        width: 100%;
     }
 }
