--- a/src/global.css
+++ b/src/global.css
@@ -1,23 +1,35 @@
 body {
-    color: #fff;
-    background: #17181c;
+    color: #838a8d;
+    background: rgb(255, 255, 255);
     font-family: sans-serif;
+    font-size: 16px;
+    padding: 0;
+    margin: 0;
 }
 
 header {
     padding: 10px 30px;
-}
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
 
 header h1 {
     font-size: 40px;
     font-weight: 800;
 }
-
+main {
+    background: linear-gradient(to bottom, #9d9292 0, rgba(240, 240, 240, 0.98) 1%, rgba(255, 255, 255, 0) 50%);
+    display: flex;
+    min-height: 100%;
+}
 footer {
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgba(0,0,0,0.8);
+    border-top: 5px solid #333030;
 }
 footer .copyright {
     font-size: 14px;
@@ -32,4 +44,33 @@ footer .copyright a:hover {
 }
 footer .copyright:before {
     content: '©';
+}
+.footer {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    }
+.footer a {
+    text-decoration: none;
+    color: #333;
+}
+
+
+@media (max-width: 768px) {
+    body {
+        font-size: 14px;
+    }
+    main {
+        flex-direction: column;
+        padding: 15px;
+        justify-content: center;
+        align-items: center;
+
+    }
+}
+
+@media (max-width: 480px) {
+    body {
+        font-size: 12px;
+    }
 }
