--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,5 @@
 body {
-    color: #838a8d;
+    color: #252626;
     background: rgb(255, 255, 255);
     font-family: sans-serif;
     font-size: 16px;
@@ -12,6 +12,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 5px solid #333030;
+    background-color: rgb(255, 253, 250);
     }
 
 header h1 {
@@ -28,7 +30,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(159, 158, 158, 0.8);
     border-top: 5px solid #333030;
 }
 footer .copyright {
@@ -47,12 +49,23 @@ footer .copyright:before {
 }
 .footer {
     width: 80%;
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    column-gap: 20px;
     }
 .footer a {
     text-decoration: none;
     color: #333;
+}
+.gh-profile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.gh-profile img {
+    margin-right: 5px;
 }
 
 
